--- a/style-edit.scss
+++ b/style-edit.scss
@@ -45,18 +45,19 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-family: $sourceSerifPro;
-  font-size: 24px;
+  font-size: 32px;
   letter-spacing: 0.3px;
 
   a {
     color: inherit;
+    text-decoration: none;
   }
 }
 
 h2 {
   margin-bottom: 0;
   font-family: $sourceSerifPro;
-  font-size: 18px;
+  font-size: 22px;
 }
 
 h3 {
@@ -76,7 +77,6 @@ p {
 }
 
 a {
-  //color: $blue;
   color: $darkGray;
   text-decoration: none;
 	cursor: pointer;
@@ -125,8 +125,10 @@ img {
 }
 
 .date {
+  margin-top: 12px;
+  font-size: 12px;
   font-style: italic;
-  color: $gray;
+  color: #999;
 }
 
 // Specify the color of the selection
@@ -239,6 +241,13 @@ img {
 }
 
 .post {
+  p a,
+  li a {
+    -webkit-box-shadow:inset  0px -10px 0px 0px #ffe2f3;
+    -moz-box-shadow:inset     0px -10px 0px 0px #ffe2f3;
+    box-shadow:inset          0px -10px 0px 0px #ffe2f3;
+  }
+
   blockquote {
     margin: 1.8em .8em;
     border-left: 2px solid $gray;
@@ -272,6 +281,10 @@ sup {
   margin-top: 50px;
   border-top: 1px solid $lightGray;
   font-size: 13px;
+
+  li a {
+    box-shadow: none;
+  }
 }
 
 
