added technical primer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-        	2016 · <a href="http://paperdove.com">Dae In Chung</a> · built with <a href="https://jekyllrb.com">Jekyll</a>
+        	Copyright 2016 · <a href="http://paperdove.com">Dae In Chung</a> · built with <a href="https://jekyllrb.com">Jekyll</a>
         	<!-- {% include svg-icons.html %} -->
         </footer>
       </div>
