--- a/style-edit.scss
+++ b/style-edit.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $white;
-  font: 16px/1.5 $openSans;
+  font: 16px/1.7 $openSans;
   color: $darkGray;
 }
 
@@ -245,7 +245,9 @@ img {
 
 .post {
   p a,
-  li a {
+  li a,
+  figure a,
+  .footnotes a {
     -webkit-box-shadow:inset  0px -10px 0px 0px #ffe2f3;
     -moz-box-shadow:inset     0px -10px 0px 0px #ffe2f3;
     box-shadow:inset          0px -10px 0px 0px #ffe2f3;
@@ -270,6 +272,11 @@ img {
 
   .comments {
     margin-top: 10px;
+  }
+
+  figure img {
+    display: block;
+    margin: 0 auto;
   }
 
   figcaption {
