--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,4 +1,4 @@
 <figure>
-	<img src="{{ include.src }}" alt="{{ include.alt }}">
+	<img src="{{ include.src }}" alt="{{ include.alt }}" srcset="{{ include.src | replace: '.jpg', '@2x.jpg' | replace: '.png', '@2x.png' }} 2x">
 	<figcaption>{{ include.caption }}</figcaption>
 </figure>
