--- a/style-edit.scss
+++ b/style-edit.scss
@@ -122,6 +122,12 @@ img {
   max-width: 100%;
 }
 
+code {
+  padding: 2px;
+  border-radius: 2px;
+  background-color: #efefef;
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
