--- a/loop/css/style.css
+++ b/loop/css/style.css
@@ -9,16 +9,36 @@ html { box-sizing: border-box; }
 
 /***** typography *****/
 html { 
-  font-family: "Droid Serif", serif; 
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
 }
-h1 { font-size: 1.6rem; }
+h1 { 
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.desc h2 { 
+  font-size: 1.1rem; 
+  font-weight: 400;
+}
+.desc h3 {
+  font-size: 0.9rem;
+  font-weight: 300;
+  font-style: italic;
+}
+.desc p {
+  font-size: 1.4rem;
+  font-weight: 300;
+  letter-spacing: 0.1px;
+  line-height: 1.8rem;
+}
 
 
-//body { background-color: #ccc; }
+body { background-color: #eee; }
 
 .container {
   margin: 0 auto;
+  padding: 0 5%;
   max-width: 1100px;
   min-width: 260px;
 }
@@ -40,6 +60,14 @@ h1 {
   text-decoration: none;
   padding: 12px;
 }
+.nav-main li a,
+.nav-main li a:visited {
+  color: black;
+}
+.nav-main li a:hover,
+.nav-main li a:active {
+  color: darkgrey;
+}
 
 .images {
   width: 100%;
@@ -54,10 +82,32 @@ h1 {
   width: 100%;
 }
 
+.desc {
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 120px;
+  width: 90%;
+  max-width: 600px;
+}
+.desc h2 {
+  margin-bottom: 8px;
+  text-align: center;
+}
+.desc h3 {
+  margin-bottom: 14px;
+  text-align: center;
+}
+
+
 @media (max-width: 500px) {
   .img-container {
     float: none;
     width: 100%;
     margin: 2% 0;
+  }
+  
+  .desc p {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
   }
 }
