--- a/loop/css/style.css
+++ b/loop/css/style.css
@@ -30,7 +30,7 @@ h1 {
   font-size: 1.4rem;
   font-weight: 300;
   letter-spacing: 0.1px;
-  line-height: 1.8rem;
+  line-height: 1.9rem;
 }
 
 
@@ -96,6 +96,9 @@ h1 {
 .desc h3 {
   margin-bottom: 14px;
   text-align: center;
+}
+.desc p {
+  margin-bottom: 12px;
 }
 
 
