--- a/2016/loops/css/style.css
+++ b/2016/loops/css/style.css
@@ -35,17 +35,25 @@ h1 {
 
 
 body { background-color: #eee; }
+a {
+  text-decoration: none;
+}
 
 .container {
   margin: 0 auto;
-  padding: 0 5%;
-  max-width: 1100px;
+  padding: 0 6%;
+  max-width: 1200px;
   min-width: 260px;
 }
 h1 {
   margin: 20px;
   text-align: center;
 }
+h1 a,
+h1 a:visited {
+  color: black;
+}
+
 .nav-main {
   margin-bottom: 40px;
   height: 40px;
