--- a/2016/loops/css/style.css
+++ b/2016/loops/css/style.css
@@ -110,7 +110,7 @@ h1 a:visited {
 }
 
 
-@media (max-width: 500px) {
+@media screen and (max-width: 500px) {
   .img-container {
     float: none;
     width: 100%;
