--- a/2016/loops/css/style.css
+++ b/2016/loops/css/style.css
@@ -113,7 +113,7 @@ h1 a:visited {
 @media screen 
 and (max-width: 500px),
 @media screen 
-and (max-width: 500px)
+and (max-device-width: 500px)
 and (-webkit-min-device-pixel-ratio: 2) {
   .img-container {
     float: none;
